chore: pdf reports
